# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2006 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.305 2006-11-07 19:07:25 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --
2.1.3 (2006/??/??)
 - (2006/11/07) read out CustomerUserSearchListLimit correctly if LDAP agent
    backend is in use
 - (2006/10/27) fixed always shown responsible selection
 - (2006/10/27) removed not needed default free text fields from phone outbound
 - (2006/10/26) fixed agent can be customer follow up feature
 - (2006/10/26) added possible - selection for next state in phone view outbount
 - (2006/10/20) fixed LDAP problems "First bind failed! No password, did you
    mean noauth or anonymous ?"
 - (2006/10/19) fixed double agent notifications on ticket move to queue
    and also selected owner

2.1.2 (2006/10/18)
 - (2006/10/13) switched to md5 check sum for password in user_preference table
 - (2006/10/12) fixed #1373 - RH RPM requires sendmail, but works with other MTAs
 - (2006/10/12) fixed double agent notifications on follow up if agent is
    owner and responible
 - (2006/10/12) fixed bug #1311 - Apostrophes are incorrectly displayed under
    IE 6 & IE7 but correctly displayed under Firefox 1.5.0.6  -=>
    moved from $Text{} to $JSText{} for text translations in Java Script parts
    to have a correct quoting
 - (2006/10/11) fixed not shown follow up feature in customer panel if ticket
     is closed
 - (2006/10/09) added missing customer print feature
 - (2006/10/05) fixed bug #1361 - Can't locate object method "ModGet" via
    package "Kernel::System::Config"

2.1.1 (2006/10/05)
 - (2006/10/05) fixed bug #1213 - some errors not logger by LDAP backends
 - (2006/10/05) fixed bug #1248 - Ticket Zoom - Article Thread - Color of auto
    responses should be yellow