@@ -2,14 +2,15 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2006 OTRS GmbH, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.305 2006-11-07 19:07:25 martin Exp $
+# $Id: CHANGES,v 1.306 2006-11-08 11:08:18 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
 # did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
 # --
 2.1.3 (2006/??/??)
- - (2006/11/07) read out CustomerUserSearchListLimit correctly if LDAP agent
+ - (2006/11/07) fixed not working all owner/responible selection in phone view
+ - (2006/11/07) read out CustomerUserSearchListLimit correctly if LDAP customer
     backend is in use
  - (2006/10/27) fixed always shown responsible selection
  - (2006/10/27) removed not needed default free text fields from phone outbound
